# Boids

./: .gitignore  CMakeLists.txt  README.md
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: App.h  Boid.h  Config.h  Flock.h  Renderer.h  Vec3.h
src/: App.cpp  Flock.cpp  Renderer.cpp  main.cpp
